--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
            <div class="registrarse">
               
                <a href="index6.html">Crear cuenta</a> 
-               <a href="#">Iniciar seción</a>
+               <a href="index4.html">Iniciar seción</a>
                <img src="./assets/imagenes/shopping-bag-svgrepo-com (1).svg "alt="bolsa">
            </div>
            
@@ -44,7 +44,7 @@
    <div id="formularioLogin">
     <form action="pagina" method="post">
 
-   <label for="email">EMAIL
+   <label for="email">Email
    <input type="email" id="email" name="email" placeholder="ej:tunombre@email.com" required>
    </label>
    <label for="password">Contraseña
