--- a/index7.html
+++ b/index7.html
@@ -30,7 +30,7 @@
            <nav>
                
                <a href="./index.html">Inicio</a>
-               <a href="#">Productos</a>
+               <a href="index2.html">Productos</a>
                <a href="./index3.html">Cómo comprar</a>
                <a href="#">Quiénes somos</a>
                <a href="index5.html">Contacto</a>
@@ -140,7 +140,7 @@ No asumimos ninguna responsabilidad por la difusión de Información Personal qu
                      <br>
                      <ul>
                       <li><a href="index.html">Inicio</a></li>
-                      <li><a href="#">Productos</a></li>
+                      <li><a href="index2.html">Productos</a></li>
                       <li><a href="index3.html">Cómo comprar</a></li>
                      <li><a href="#">Quienes somos</a></li>
                      <li><a href="index5.html">Contacto</a></li>
