--- a/index4.html
+++ b/index4.html
@@ -111,8 +111,8 @@
                <br>
                <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Cómo comprar</a></li>
+                <li><a href="index2.html">Productos</a></li>
+                <li><a href="index3.html">Cómo comprar</a></li>
                <li><a href="#">Quienes somos</a></li>
                <li><a href="index5.html">Contacto</a></li>
                </ul>
