--- a/index6.html
+++ b/index6.html
@@ -30,7 +30,7 @@
            <nav>
                
                <a href="./index.html">Inicio</a>
-               <a href="#">Productos</a>
+               <a href="index2.html">Productos</a>
                <a href="./index3.html">Cómo comprar</a>
                <a href="#">Quiénes somos</a>
                <a href="index5.html">Contacto</a>
@@ -157,7 +157,7 @@
         <br>
          <ul>
            <li><a href="index.html">Inicio</a></li>
-           <li><a href="#">Productos</a></li>
+           <li><a href="index2.html">Productos</a></li>
            <li><a href="index3.html">Cómo comprar</a></li>
            <li><a href="#">Quienes somos</a></li>
            <li><a href="index5.html">Contacto</a></li>
