--- a/index8.html
+++ b/index8.html
@@ -29,8 +29,8 @@
            <nav>
                
                <a href="./index.html">Inicio</a>
-               <a href="#">Productos</a>
-               <a href="#">Cómo comprar</a>
+               <a href="index2.html">Productos</a>
+               <a href="index3.html">Cómo comprar</a>
                <a href="#">Quiénes somos</a>
                <a href="index5.html">Contacto</a>
              </nav>
