--- a/index2.html
+++ b/index2.html
@@ -183,16 +183,18 @@
  <br>
 <div id="producto02">
   <figure>
-    <img src="./assets/imagenes/ooiuyy.jpg" alt="foto">
-    <p>Bandolera Brown <br> <strong>$11.900</strong> <del>$13.900</del> <br><strong>3</strong> cuotas sin interés de <strong>$3.966,67</strong> <br> <a href=""><button> Ver producto</button></a>  </p>
-  </figure>
+    <img src="./assets/imagenes/lv.jpg" alt="foto">
+    <p>Mochile LV <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67></strong>   <br> <a href=""><button> Ver producto</button></a>   </p>
+</figure>
+
+  
 </div>
 <p></p>
 <br>
 <div id="producto03">
 <figure>
     <img src="./assets/imagenes/dooney-bourke-Pale-Pink-Pebble-Grain-Small-Lexington-Shopper (1).webp"alt="foto">
-    <p> Cartera Coral <br><strong>$14.900</strong> <del>$16.500</del> <br><strong>3</strong> cuotas sin interés de <strong>$4.966,67</strong>    <br> <a href=""><button> Ver producto</button></a> </p>
+    <p> Cartera Coral <br><strong>$14.900</strong> <del>$16.500</del> <br><strong>3</strong> cuotas sin interés de <strong>$4.966,67</strong>    <br> <a href="index12.html"><button> Ver producto</button></a> </p>
 </figure>
 
 
@@ -206,8 +208,10 @@
  <div class="imagenesProducto1">
  <div id="producto01">
     <figure>
-        <img src="./assets/imagenes/lv.jpg" alt="foto">
-        <p>Mochila black LV <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67 </strong>  <br> <a href=""><button> Ver producto</button></a> </p>
+        
+        <img src="assets/imagenes/kkkkj.jpg" alt="foto">
+        <p>Bandolera Brown <br> <strong>$11.900</strong> <del>$13.900</del> <br><strong>3</strong> cuotas sin interés de <strong>$3.966,67</strong> <br> <a href="index13.html"><button> Ver producto</button></a></p>
+        
     </figure>
   
  </div>
@@ -225,7 +229,7 @@
 <div id="producto03">
  <figure>
     <img src="./assets/imagenes/mochila oso.jpg" alt="foto">
-    <p>Mochila Black & white<br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67 </strong>  <br> <a href=""><button> Ver producto</button></a>  </p>
+    <p>Mochila Black & white<br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67 </strong>  <br> <a href="index14.html"><button> Ver producto</button></a>  </p>
 </figure>
 
 </div>
