--- a/index2.html
+++ b/index2.html
@@ -108,7 +108,7 @@
        <figure>
         <img src="./assets/imagenes/nike.jpg" alt="foto">
        </figure>
-       <p>Zapatillas Nike <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67</strong>  <br> <a href=""><button> Ver producto</button></a>    </p>
+       <p>Zapatillas Nike  <strong style="color:red;">AGOTADO</strong> <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67</strong>  <br> <a href=""><button> Ver producto</button></a>    </p>
     </div>
     <p></p>
     
