--- a/index6.html
+++ b/index6.html
@@ -23,7 +23,7 @@
            <div class="registrarse">
               
                <a href="index6.html">Crear cuenta</a> 
-               <a href="index4.html">Iniciar seción</a>
+               <a href="index4.html">Iniciar sesión</a>
                <img src="./assets/imagenes/shopping-bag-svgrepo-com (1).svg "alt="bolsa">
            </div>
            
