--- a/index7.html
+++ b/index7.html
@@ -244,7 +244,7 @@ No asumimos ninguna responsabilidad por la difusión de Información Personal qu
 
 
 
-
+<script src="./js/codigo7.js"></script>
 
 
 
