--- a/index8.html
+++ b/index8.html
@@ -145,7 +145,7 @@
             <br>
             <input type="email" name="email" id="suscripcion" placeholder="Ingresa tu email y recibi las mejores ofertas">
         </label>
-        <button type="submit">SUSCRIBIRSE</button>
+        <button id="btn-suscripcion" type="submit">SUSCRIBIRSE</button>
     
     </form>
     <div class="redesSociales">
