--- a/index9.html
+++ b/index9.html
@@ -115,7 +115,7 @@
           <figure>
             <img src="./assets/imagenes/all star.jpg" alt="foto">
           </figure>
-          <p>Zapatillas Converse <br> <strong>$13.900</strong> <del>$16.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$4.633,33</strong>   <br> <a href=""><button> Ver producto</button></a>  </p>
+          <p>Zapatillas Converse <br> <strong>$13.900</strong> <del>$16.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$4.633,33</strong>   <br> <a href="index15.html"><button> Ver producto</button></a>  </p>
         </div>
         <p></p>
         <br>
@@ -168,7 +168,7 @@
                <br>
                <input type="email" name="email" id="suscripcion" placeholder="Ingresa tu email y recibi las mejores ofertas">
            </label>
-           <button type="submit">SUSCRIBIRSE</button>
+           <button id="btn-suscripcion" type="submit">SUSCRIBIRSE</button>
        
        </form>
        <div class="redesSociales">
