--- a/index6.html
+++ b/index6.html
@@ -150,7 +150,7 @@
             <br>
             <input type="email" name="email" id="suscripcion" placeholder="Ingresa tu email y recibi las mejores ofertas">
         </label>
-        <button type="submit">SUSCRIBIRSE</button>
+        <button  id="btn-suscripcion" type="submit">SUSCRIBIRSE</button>
     
     </form>
     
