--- a/index7.html
+++ b/index7.html
@@ -135,7 +135,7 @@ No asumimos ninguna responsabilidad por la difusión de Información Personal qu
             <br>
             <input type="email" name="email" id="suscripcion" placeholder="Ingresa tu email y recibi las mejores ofertas">
         </label>
-        <button type="submit">SUSCRIBIRSE</button>
+        <button id="btn-suscripcion" type="submit">SUSCRIBIRSE</button>
     
     </form>
     <div class="redesSociales">
