--- a/index9.html
+++ b/index9.html
@@ -41,7 +41,7 @@
                <a href="index.html">Inicio</a>
                <a href="index2.html">Productos</a>
                <a href="./index3.html">Cómo comprar</a>
-               <a href="#">Quiénes somos</a>
+              
                <a href="./index5.html">Contacto</a>
              </nav>
        </section>
@@ -282,6 +282,6 @@
    
 
    <script src="./js/codigo2.js"></script>
-
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 </html>
