--- a/index7.html
+++ b/index7.html
@@ -40,7 +40,7 @@
                <a href="./index.html">Inicio</a>
                <a href="index2.html">Productos</a>
                <a href="./index3.html">Cómo comprar</a>
-               <a href="#">Quiénes somos</a>
+             
                <a href="index5.html">Contacto</a>
              </nav>
        </section>
@@ -245,7 +245,7 @@ No asumimos ninguna responsabilidad por la difusión de Información Personal qu
 
 
 <script src="./js/codigo7.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 
 </body>
