--- a/index8.html
+++ b/index8.html
@@ -39,7 +39,7 @@
                <a href="./index.html">Inicio</a>
                <a href="index2.html">Productos</a>
                <a href="index3.html">Cómo comprar</a>
-               <a href="#">Quiénes somos</a>
+              
                <a href="index5.html">Contacto</a>
              </nav>
        </section>
@@ -264,7 +264,7 @@
 
 
             <script src="./js/codigo8.js"></script>
-
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 
 
