--- a/index2.html
+++ b/index2.html
@@ -131,9 +131,9 @@
     <br>
     <div id="producto03">
        <figure>
-        <img src="./assets/imagenes/converseBlack.jpg" alt="foto" id="Nike">
+        <img src="./assets/imagenes/vanspink.jpg" alt="foto" id="Nike">
        </figure>
-       <p>Zapatillas Converse  <strong style="color:red;">AGOTADO</strong> <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67</strong>  <br> <button id="btn-agotado"> Ver producto</button> <button>Comprar</button> </p>
+       <p>Bota Vans  <strong style="color:red;">AGOTADO</strong> <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67</strong>  <br> <button id="btn-agotado"> Ver producto</button> <button>Comprar</button> </p>
     </div>
     <p></p>
     
