--- a/index9.html
+++ b/index9.html
@@ -62,12 +62,18 @@
 
 
    </div>
-   <div>
+
+
+
+<div>
+    <img src="./assets/imagenes/banner-vans.webp" alt="banner-vans">
+</div>
+<br><br>
+<div>
     <a id="inicio" href="index.html">Inicio</a> 
     <p class="Calzados">/Calzados</p>
 </div>
-<br><br><br>
-
+<br><br>
 <div class="imagenesProducto1">
     <div id="producto01">
         <figure>
@@ -121,9 +127,9 @@
         <br>
         <div id="producto03">
            <figure>
-            <img src="./assets/imagenes/converseBlack.jpg" alt="foto" id="Nike">
+            <img src="./assets/imagenes/vanspink.jpg" alt="foto" id="Nike">
            </figure>
-           <p>Zapatillas Converse  <strong style="color:red;">AGOTADO</strong> <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67</strong>  <br> <button id="btn-agotado"> Ver producto</button>  </p>
+           <p>Bota Vans <strong style="color:red;">AGOTADO</strong> <br> <strong>$15.000</strong> <del>$17.600</del> <br> <strong>3</strong> cuotas sin interés de <strong>$5.166,67</strong>  <br> <button id="btn-agotado"> Ver producto</button>  </p>
         </div>
         <p></p>
         
