--- a/index5.html
+++ b/index5.html
@@ -129,21 +129,25 @@
 
             <button id="enviando">Enviar</button>
 
-            <div id="div_mensaje_enviando" style="display: none;">
-                <p>Los datos han sido enviados</p>
+            <div id="div_mensaje_enviando" >
+                <p>Los datos están siendo enviados</p>
             </div>
-
+            <br>
+           
 
 
         </form>
 
-
+        
 
 
 
 
     </div>
 
+    <div id="loading_form">
+        <img src="./assets/imagenes/loading.gif" alt="gif">
+    </div>
 
 
 
