--- a/index5.html
+++ b/index5.html
@@ -130,7 +130,7 @@
             <button id="enviando">Enviar</button>
 
             <div id="div_mensaje_enviando" >
-                <p>Los datos están siendo enviados</p>
+                <p>Tu consulta está siendo enviada</p>
             </div>
             <br>
            
