--- a/index4.html
+++ b/index4.html
@@ -6,13 +6,7 @@
     <title>Iniciar sesión</title>
     <link rel="stylesheet" href="./css/style4.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script>
-        $(document). ready(function(){
-        $("#img-carrito").click(function(){
-        $("#detalle-compra").slideToggle(300);
-    });
-     });
-    </script>
+   
 </head>
 <body>
     <header>
@@ -75,7 +69,7 @@
    <input type="email" id="email" name="email" placeholder="ej:tunombre@email.com" required>
    </label>
    <label for="password">Contraseña
-    <input type="password" id="password" name="password" >
+    <input type="password" id="password" name="password" required >
    </label>
    <p>¿Olvidaste tu contraseña?</p>
    <br>
@@ -86,14 +80,18 @@
     <p>¿No tienes cuenta?</p> <a href="index6.html"><stong>Crear Cuenta</stong></a>
    </div>
    
-
+   <div id="div_mensaje_enviando" >
+    <p>Iniciando sesión </p>
+</div>
 
 
 
 
     </form>
 
-
+    <div id="loading_form">
+        <img src="./assets/imagenes/loading.gif" alt="gif">
+    </div>
 
 
 
@@ -104,15 +102,7 @@
 
 
 
-   <div class="newsletter">
-       <form action="pagina1" method="post">
-           <label for="suscripcion"> <p>Suscríbete a nuestro newsletters</p>
-               <br>
-               <input type="email" name="email" id="suscripcion" placeholder="Ingresa tu email y recibi las mejores ofertas">
-           </label>
-           <button id="btn-suscripcion" type="submit">SUSCRIBIRSE</button>
-       
-       </form>
+   
        <div class="redesSociales">
            <a href="#"><img src="./assets/imagenes/facebook.png" alt="facebook"></a> 
            <a href="#"><img src="./assets/imagenes/logo rosa.png" alt="instagram"> </a> 
