--- a/index4.html
+++ b/index4.html
@@ -63,7 +63,7 @@
    <br><br>
 
    <div id="formularioLogin">
-    <form action="pagina" method="post">
+    <form action="pagina.php" method="post">
 
    <label for="email">Email
    <input type="email" id="email" name="email" placeholder="ej:tunombre@email.com" required>
